--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,10 @@ rand = "0.8"
 rquest = "5"
 rquest-util = "2.2.1"
 lazy_static = "1.5.0"
+clap = { version = "4.5", features = ["derive"] }
+serde_json = "1.0"
+csv = "1.3"
+urlencoding = "2"
+base64 = "0.21"
+regex = "1.10"
+axum = "0.7"
